--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,57 @@
-body{
-    background-color: gainsboro;
+/* Colors
+ */
+
+/* Global */
+body {
+  color: #343434;
+  margin: 0;
+  padding: 0;
 }
 img {
   width: 300px;
+}
+a {
+  color: #FFE66D;
+}
+a:hover {
+  text-decoration: none;
+}
+.content-wrap {
+  width: 800px;
+  margin: 0 auto;
+}
+
+/* Profile */
+header {
+  background: #2F3061;
+  color: #F7FFF7;
+}
+
+/* Projects*/
+.projects {
+  background: #F7FFF7;
+}
+.projects a {
+  color: #2F3061;
+}
+.projects .btn {
+  color: #F7FFF7;
+  background: #2F3061;
+  text-decoration: none;
+  padding: 8px;
+  border-radius: 4px;
+}
+.projects .btn:hover {
+  background: rgba(47, 48, 97, 80%);
+}
+
+/* Work Experience */
+.work-experience {
+  background: #A1C6D7;
+}
+
+/* Education and Certification*/
+footer {
+  background: #343434;
+  color: #F7FFF7;
 }
